Added validation for postLogin
